cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/inc210983_1.h

struct	env210983 {
    int *savefd;
    struct env210983 *oenv;
};

#include "inc210983_2.h"
